--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 <body>
 
     <div id="container">
-        <img src="img/01.webp" alt="">
+        <img id="immagine-attiva" src="" alt="">
         <button id="previous"> < </button>
-    <button id="next"> > </button>
+        <button id="next"> > </button>
+        <div id="container-flex">
+            <div id="titolo">bla</div>
+            <div id="descrizione">bla</div>
+
+        </div>
+        
     </div>
 
     
